; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libthr/thread/extr_thr_sleepq.c__sleepq_remove.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libthr/thread/extr_thr_sleepq.c__sleepq_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sleepqueue = type { i32, i32 }
%struct.pthread = type { i32*, %struct.sleepqueue* }

@wle = common dso_local global i32 0, align 4
@sq_hash = common dso_local global i32 0, align 4
@sq_flink = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_sleepq_remove(%struct.sleepqueue* %0, %struct.pthread* %1) #0 {
  %3 = alloca %struct.sleepqueue*, align 8
  %4 = alloca %struct.pthread*, align 8
  %5 = alloca i32, align 4
  store %struct.sleepqueue* %0, %struct.sleepqueue** %3, align 8
  store %struct.pthread* %1, %struct.pthread** %4, align 8
  %6 = load %struct.sleepqueue*, %struct.sleepqueue** %3, align 8
  %7 = getelementptr inbounds %struct.sleepqueue, %struct.sleepqueue* %6, i32 0, i32 1
  %8 = load %struct.pthread*, %struct.pthread** %4, align 8
  %9 = load i32, i32* @wle, align 4
  %10 = call i32 @TAILQ_REMOVE(i32* %7, %struct.pthread* %8, i32 %9)
  %11 = load %struct.sleepqueue*, %struct.sleepqueue** %3, align 8
  %12 = getelementptr inbounds %struct.sleepqueue, %struct.sleepqueue* %11, i32 0, i32 1
  %13 = call i64 @TAILQ_EMPTY(i32* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %22

15:                                               ; preds = %2
  %16 = load %struct.sleepqueue*, %struct.sleepqueue** %3, align 8
  %17 = load i32, i32* @sq_hash, align 4
  %18 = call i32 @LIST_REMOVE(%struct.sleepqueue* %16, i32 %17)
  %19 = load %struct.sleepqueue*, %struct.sleepqueue** %3, align 8
  %20 = load %struct.pthread*, %struct.pthread** %4, align 8
  %21 = getelementptr inbounds %struct.pthread, %struct.pthread* %20, i32 0, i32 1
  store %struct.sleepqueue* %19, %struct.sleepqueue** %21, align 8
  store i32 0, i32* %5, align 4
  br label %32

22:                                               ; preds = %2
  %23 = load %struct.sleepqueue*, %struct.sleepqueue** %3, align 8
  %24 = getelementptr inbounds %struct.sleepqueue, %struct.sleepqueue* %23, i32 0, i32 0
  %25 = call %struct.sleepqueue* @SLIST_FIRST(i32* %24)
  %26 = load %struct.pthread*, %struct.pthread** %4, align 8
  %27 = getelementptr inbounds %struct.pthread, %struct.pthread* %26, i32 0, i32 1
  store %struct.sleepqueue* %25, %struct.sleepqueue** %27, align 8
  %28 = load %struct.sleepqueue*, %struct.sleepqueue** %3, align 8
  %29 = getelementptr inbounds %struct.sleepqueue, %struct.sleepqueue* %28, i32 0, i32 0
  %30 = load i32, i32* @sq_flink, align 4
  %31 = call i32 @SLIST_REMOVE_HEAD(i32* %29, i32 %30)
  store i32 1, i32* %5, align 4
  br label %32

32:                                               ; preds = %22, %15
  %33 = load %struct.pthread*, %struct.pthread** %4, align 8
  %34 = getelementptr inbounds %struct.pthread, %struct.pthread* %33, i32 0, i32 0
  store i32* null, i32** %34, align 8
  %35 = load i32, i32* %5, align 4
  ret i32 %35
}

declare dso_local i32 @TAILQ_REMOVE(i32*, %struct.pthread*, i32) #1

declare dso_local i64 @TAILQ_EMPTY(i32*) #1

declare dso_local i32 @LIST_REMOVE(%struct.sleepqueue*, i32) #1

declare dso_local %struct.sleepqueue* @SLIST_FIRST(i32*) #1

declare dso_local i32 @SLIST_REMOVE_HEAD(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
